--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,8 +4,13 @@ services:
   db-node:
     image: mariadb
     container_name: db-node
+    environment:
+      - MYSQL_ROOT_PASSWORD=${MYSQL_ROOT_PASSWORD}
+      - MYSQL_PASSWORD=${MYSQL_PASSWORD}
+      - MYSQL_USER=${MYSQL_USER}
+      - MYSQL_DATABASE=${MYSQL_DATABASE}
     ports:
-      - 3306:3306
+      - "3306:3306"
     volumes:
       - db-node-data:/var/lib/mysql
     healthcheck:
@@ -15,11 +20,31 @@ services:
     networks:
       - arch-network
 
+  auth-service:
+    build:
+      context: .
+      dockerfile: docker/auth_service/Dockerfile
+    container_name: auth_service
+    environment:
+      - MYSQL_PASSWORD=${MYSQL_PASSWORD}
+      - MYSQL_USER=${MYSQL_USER}
+      - MYSQL_DATABASE=${MYSQL_DATABASE}
+      - DB_PORT=${DB_PORT}
+      - DB_HOST=${DB_HOST}
+      - SERVICE_PORT=8081
+    ports:
+      - "8081:8081"
+    networks:
+      - arch-network
+    depends_on:
+      db-node:
+        condition: service_healthy
+
 volumes:
   db-node-data:
+
 
 networks:
   arch-network:
     driver: "bridge"
     external: false
-
