--- a/config/db.env
+++ b/config/db.env
@@ -4,3 +4,5 @@ MYSQL_USER=user
 MYSQL_DATABASE=my_awesome_shop_db
 DB_PORT=3306
 DB_HOST=db-node
+AUTH_SERVICE_HOST=auth-service
+AUTH_SERVICE_PORT=8081
