--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -24,7 +24,7 @@ services:
     build:
       context: .
       dockerfile: docker/auth_service/Dockerfile
-    container_name: auth_service
+    container_name: auth-service
     environment:
       - MYSQL_PASSWORD=${MYSQL_PASSWORD}
       - MYSQL_USER=${MYSQL_USER}
@@ -34,6 +34,28 @@ services:
       - SERVICE_PORT=8081
     ports:
       - "8081:8081"
+    networks:
+      - arch-network
+    depends_on:
+      db-node:
+        condition: service_healthy
+
+  product-service:
+    build:
+      context: .
+      dockerfile: docker/product_service/Dockerfile
+    container_name: product-service
+    environment:
+      - MYSQL_PASSWORD=${MYSQL_PASSWORD}
+      - MYSQL_USER=${MYSQL_USER}
+      - MYSQL_DATABASE=${MYSQL_DATABASE}
+      - DB_PORT=${DB_PORT}
+      - DB_HOST=${DB_HOST}
+      - SERVICE_PORT=8082
+      - AUTH_SERVICE_PORT=${AUTH_SERVICE_PORT}
+      - AUTH_SERVICE_HOST=${AUTH_SERVICE_HOST}
+    ports:
+      - "8082:8082"
     networks:
       - arch-network
     depends_on:
