--- a/cpp/CMakeLists.txt
+++ b/cpp/CMakeLists.txt
@@ -16,7 +16,8 @@ else ()
     add_compile_options(-Wall -Wextra -pedantic -Werror)
 endif ()
 
-conan_cmake_configure(REQUIRES poco/1.12.4
+conan_cmake_configure(REQUIRES
+        poco/1.12.4 redis-plus-plus/1.3.7
         GENERATORS cmake_find_package)
 
 conan_cmake_install(PATH_OR_REFERENCE .
@@ -24,9 +25,11 @@ conan_cmake_install(PATH_OR_REFERENCE .
         REMOTE conancenter)
 
 find_package(Poco)
+find_package(redis++)
 
 add_subdirectory(utils)
 
 add_subdirectory(auth_service)
 add_subdirectory(product_service)
 add_subdirectory(cart_service)
+add_subdirectory(cache_service)
