--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -105,7 +105,7 @@ services:
   auth-service:
     build:
       context: .
-      dockerfile: docker/auth_service/Dockerfile
+      dockerfile: docker/cpp_image/Dockerfile
     container_name: auth-service
     environment:
       - MYSQL_PASSWORD=${MYSQL_PASSWORD}
@@ -114,6 +114,7 @@ services:
       - DB_PORT=${PROXYSQL_PORT}
       - DB_HOST=${PROXYSQL_HOST}
       - SERVICE_PORT=8081
+      - SERVICE_EXE=/code/cpp/build/auth_service/auth_service
     ports:
       - "8081:8081"
     networks:
@@ -125,7 +126,7 @@ services:
   product-service:
     build:
       context: .
-      dockerfile: docker/product_service/Dockerfile
+      dockerfile: docker/cpp_image/Dockerfile
     container_name: product-service
     environment:
       - MYSQL_PASSWORD=${MYSQL_PASSWORD}
@@ -136,6 +137,7 @@ services:
       - SERVICE_PORT=8082
       - AUTH_SERVICE_PORT=${AUTH_SERVICE_PORT}
       - AUTH_SERVICE_HOST=${AUTH_SERVICE_HOST}
+      - SERVICE_EXE=/code/cpp/build/product_service/product_service
     ports:
       - "8082:8082"
     networks:
@@ -149,7 +151,7 @@ services:
   cart-service:
     build:
       context: .
-      dockerfile: docker/cart_service/Dockerfile
+      dockerfile: docker/cpp_image/Dockerfile
     container_name: cart-service
     environment:
       - MYSQL_PASSWORD=${MYSQL_PASSWORD}
@@ -160,6 +162,7 @@ services:
       - SERVICE_PORT=8083
       - AUTH_SERVICE_PORT=${AUTH_SERVICE_PORT}
       - AUTH_SERVICE_HOST=${AUTH_SERVICE_HOST}
+      - SERVICE_EXE=/code/cpp/build/cart_service/cart_service
     ports:
       - "8083:8083"
     networks:
@@ -172,12 +175,45 @@ services:
       product-service:
         condition: service_started
 
+  user-cache:
+    image: redis:6.2-alpine
+    container_name: user-cache
+    restart: always
+    ports:
+      - "6379:6379"
+    command: redis-server --save 20 1 --loglevel warning
+    networks:
+      - arch-network
+    volumes:
+      - redis-cache:/data
+
+  cache-service:
+    build:
+      context: .
+      dockerfile: docker/cpp_image/Dockerfile
+    container_name: cache-service
+    environment:
+      - SERVICE_PORT=8084
+      - CACHE_HOST=user-cache
+      - CACHE_PORT=6379
+      - AUTH_SERVICE_HOST=${AUTH_SERVICE_HOST}
+      - AUTH_SERVICE_PORT=${AUTH_SERVICE_PORT}
+      - SERVICE_EXE=/code/cpp/build/cache_service/cache_service
+    ports:
+      - "8084:8084"
+    networks:
+      - arch-network
+    depends_on:
+      - user-cache
+      - auth-service
+
 volumes:
   db-node-1-data:
   db-node-2-data:
   db-node-service-data:
   db-node-3-data:
   proxysql-data:
+  redis-cache:
 
 
 networks:
