Move cache to auth_service instead of creating a separate service for it

--- a/cpp/auth_service/CMakeLists.txt
+++ b/cpp/auth_service/CMakeLists.txt
@@ -4,14 +4,16 @@ add_executable(auth_service
         include/service_initializer.h
         include/user.h
         include/user_base.h
+        include/user_cache.h
         include/user_validator.h
         src/authentication_common.cpp
         src/request_handler_factory.cpp
         src/service_initializer.cpp
         src/user.cpp
         src/user_base.cpp
+        src/user_cache.cpp
         src/user_validator.cpp
         main.cpp)
 
-target_link_libraries(auth_service PRIVATE utils)
+target_link_libraries(auth_service PRIVATE utils redis++::redis++)
 target_include_directories(auth_service PRIVATE include)
