--- a/docker/cpp_image/Dockerfile
+++ b/docker/cpp_image/Dockerfile
@@ -9,9 +9,7 @@ COPY conan/default /root/.conan/profiles/default
 COPY conan conan
 RUN cd conan && conan install .
 
-#RUN git clone https://github.com/QElderDelta/Highload-homework-MAI.git code
-RUN mkdir code
-COPY cpp code/cpp
+RUN git clone https://github.com/QElderDelta/Highload-homework-MAI.git code
 RUN cd code/cpp && mkdir build && cd build && cmake ../ -DCMAKE_BUILD_TYPE=Release && cmake --build .
 
 COPY run_service.sh code
